# exam_os

./: CMakeLists.txt  config.txt  launcher.py  readme.md
examples/: simple_test.cpp
include/: mympi.hpp
src/: circle.cpp  launcher.cpp  main.cpp  mympi.cpp  mympi.h  producer_consumer.cpp
